se añadio script al index

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
     <script src="./firebase/firebaseConfig.js"></script>
     <script src="./firebase/firebaseController.js"></script>
     <script src="https://kit.fontawesome.com/cb7441ae4b.js" crossorigin="anonymous"></script>
+    <script src="componentes/my-header.js" type="module"></script>
     <script type="module" src="main.js"></script>
 
 </body>
