Esta creada la carpeta y ruta con post

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,15 @@
         </ul>
     </nav>
 
+    <div>
+        <ul>
+            <li>
+                <a href="#/post">Publicaciones</a>
+            </li>
+        </ul>
+
+    </div>
+
     <section id="root">
         <header id="header"></header>
     </section>
