se creo el componente header

--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo&display=swap" rel="stylesheet">
 </head>
 
-<body class="fondo">
+<body>
 
-    <nav>
-        <ul>
-            <li><a href="#/Home">Home</a></li>
-            <li><a href="#/Registro">Registro</a></li>
-            <li><a href="#/login">Iniciar Sesion</a></li>
-            <li><a href="#/logout" id="logout">Cerrar Sesion</a></li>
-            <i fas fa-step-forward></i>
-        </ul>
-    </nav>
+    <my-header></my-header>
+    <template></template>
     <div>
         <ul>
             <li>
