ya se puede loguer con google, facebook y correo normal, deja ingresar a ver los post logueandose

--- a/src/index.html
+++ b/src/index.html
@@ -18,22 +18,9 @@
     <template></template>
 
 
+    <section id="root"></section>
 
 
-    <div>
-        <ul>
-            <li>
-                <a href="#/post">Publicaciones</a>
-            </li>
-        </ul>
-
-    </div>
-
-
-
-    <section id="root">
-        <header id="header"></header>
-    </section>
     <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
