--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/cb7441ae4b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,6 +25,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
     <script type="module" src="./firebase/firebaseConfig.js"></script>
     <script src="./componentes/my-header.js"></script>
+    <script src="https://kit.fontawesome.com/cb7441ae4b.js" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- <script src="sweetalert2.all.min.js"></script>
+    <script src="sweetalert2.min.js"></script> -->
     <script type="module" src="main.js"></script>
 </body>
 
