--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,18 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap">
 </head>
 
 <body>
+
 
     <my-header></my-header>
     <template></template>
 
 
     <section id="root"></section>
+
 
 
     <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js"></script>
