se hizo responsive en vista tablet

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 
     <my-header></my-header>
-    <template></template>
+    <!-- <template></template> -->
 
 
     <section id="root"></section>
